fix: modify Rule log & refactor