@@ -137,7 +137,7 @@ public class DefaultRuleValidator implements IRuleValidator {
         String runcardId = "UNKNOWN";
         String condition = "UNKNOWN";
         if (!infosOfSameRule.isEmpty()) {
-            Map<String, Object> d = infosOfSameRule.getFirst().getDetail();
+            Map<String, Object> d = infosOfSameRule.get(0).getDetail();
             if (d != null) {
                 if (d.containsKey("runcardId")) {
                     runcardId = d.get("runcardId").toString();
